nginx-hello/nginx-hello-world-oauth2-proxy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-hello

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: nginx-hello
spec:
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx-hello
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
  namespace: nginx-hello
spec:
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello-external-auth
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-hello.cloudydev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-hello-service
                port:
                  number: 5000
