nginx-hello/nginx-ingress-hello-world.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: nginx-hello
spec:
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
      - name: nginx-hello
        image: nginxdemos/hello
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
  namespace: nginx-hello
spec:
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello-ingress
  namespace: nginx-hello
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - nginx-hello.cloudydev.net
  ingressClassName: nginx
  rules:
  - host: nginx-hello.cloudydev.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-hello-service
            port:
              number: 5000
